<resources>
    <string name="app_name">P7Zip</string>
    <string name="title_activity_main">P7Zip</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="storage">Storage</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="info_github">GitHub: <a href="https://github.com/hzy3774/AndroidP7zip">https://github.com/hzy3774/AndroidP7zip</a></string>
    <string name="info_blog">Blog: <a href="https://huzongyao.github.io/">https://huzongyao.github.io/</a></string>
    <string name="info_qq">QQ: 377406997</string>
    <string name="info_mail">Mail: hzy3774@qq.com</string>
    <string name="exit">Exit</string>
    <string name="items">%d items</string>
    <string name="select_operation">Select Your Operation</string>
    <string name="folder_cant_extract">Folder Can Not Be Extracted!</string>

    <string name="progress_title">Message</string>
    <string name="progress_message">Please wait...</string>
    <string name="msg_ret_success">Success</string>
    <string name="msg_ret_warning">Warning (Non fatal error(s))</string>
    <string name="msg_ret_fault">Fatal error </string>
    <string name="msg_ret_command">Command line error</string>
    <string name="msg_ret_memmory">Not enough memory for operation</string>
    <string name="msg_ret_user_stop">User stopped the process</string>
</resources>
